--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="frontend"
-        android:name="${applicationName}"
+        android:label="Oni"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
