--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.9.0
   flutter_secure_storage: ^9.2.4
+  socket_io_client: ^3.1.3
 
 dev_dependencies:
   flutter_test:
