--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   dio: ^5.9.0
   flutter_secure_storage: ^9.2.4
   socket_io_client: ^3.1.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
