--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -11,10 +11,19 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  dio: ^5.9.0
-  flutter_secure_storage: ^9.2.4
-  socket_io_client: ^3.1.3
+
+  # Date Time Formater
   intl: ^0.20.2
+
+  # APIs & Socket.IO
+  dio: ^5.9.0
+  socket_io_client: ^3.1.3
+
+  # Local Storage
+  flutter_secure_storage: ^9.2.4
+
+  # State Management
+  flutter_riverpod: ^3.0.3
 
 dev_dependencies:
   flutter_test:
